Ditched svg.js in favor of paper.js, partial implementation

--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
-#ecu {
+#ecu-container {
     width: 100%;
     max-width: 28em;
     margin: auto;
     padding: 2em;
 }
 
-#ecu svg {
+canvas#ecu {
     width: 100%;
+    margin: auto;
 }
