--- a/docs/herod.css
+++ b/docs/herod.css
@@ -10,5 +10,12 @@ canvas#ecu {
 	margin: auto;
 }
 
+.azur { color: #2b5df2 }
+.sable { color: #000000 }
+.sinople { color: #5ab532 }
+.pourpre { color: #d576ad }
+.or { color: #fcef3c }
+.argent { color: #ffffff }
+
 
 /*# sourceMappingURL=herod.css.map*/
